# calsat-userspace

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  TODO.md  gps.h  sensors.c  sensors.h  todo
cmake/: ConfigManagement.cmake  EditorHelpers.cmake
cmake/toolchains/: rpi-arm32-toolchain.cmake
comms/: CMakeLists.txt  cmdSend.c  commd.c  comms.h
docs/: build-process.md  computer.md  contributing.md  project-organization.md  testing.md
drivers/: CMakeLists.txt  i2cctl.c  ina3221.c
include/drivers/: i2cctl.h  ina3221.h
include/orienation/: imu.h  orientation.h
include/telem/: pwr.h  telem.h
orientation/: CMakeLists.txt  imu.c
scripts/: coverage.sh  install-toolchain-native.sh  install-toolchain-rpi0.sh  installTest  install_toolchain_native  install_toolchain_rpi0  travis-build-test.sh
src/comm/: CMakeLists.txt  arguments_cmdSend.txt  argvUtil.c  cmdSend  cmdSend.c  commd.c  commd.cmd.cfg  comms.h  encodePacket.c  fileData.c  outputStdoutStderr.c  packPacket.c  sendPacket.c  spec.txt
src/drivers/: CMakeLists.txt  i2cctl.cpp  ina3221.cpp
src/orientation/: CMakeLists.txt  imu.cpp
src/telem/: CMakeLists.txt  main.cpp  pwr.cpp  test.cpp
telem/: CMakeLists.txt  telem.c
test/: test.cc
